# billing-project

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
scripts/: deploy.ts
src/: main.rs
src/blockchain/: contract.rs  lib.rs  mod.rs  program.rs
src/models/: mod.rs
src/tests/: contract_test.rs
