[package]
name = "billing-project"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
actix-web = "4.0"
actix-rt = "2.0"  # Runtime for async main
serde = { version = "1.0", features = ["derive"] }
solana-program = "2.2.1"
borsh = "1.5.7"
ink_primitives = "5.1.1"
ink_storage = "5.1.1"
ink_env = "5.1.1"
