[package]
name = "billing-project"
version = "0.1.0"
edition = "2021"  # Changed from 2024 to 2021 (standard edition)

[dependencies]
# Web Server
actix-web = "4.0"
actix-rt = "2.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"

# Solana Blockchain - Using compatible version
solana-program = "1.17"
solana-sdk = "1.17"
borsh = "0.10"
borsh-derive = "0.10"

# Ethereum/Ink! Blockchain - Using compatible versions (commented out due to dependency conflicts)
# ink = { version = "4.3", default-features = false }
# scale = { package = "parity-scale-codec", version = "3.0", features = ["derive"] }
# scale-info = { version = "2.10", default-features = false, features = ["derive"], optional = true }

# Development/Testing
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[features]
default = []
# std = [
#     "ink/std",
#     "scale/std",
#     "scale-info/std",
# ]
# ink-as-dependency = []

[dev-dependencies]
# ink_e2e = "4.3"
solana-program-test = "1.17"